--- a/test1.html
+++ b/test1.html
@@ -37,7 +37,7 @@
       let areaMap = new AreaMap({
         el: 'container',
         areaName: '贵阳市',
-        filterAreaRegExp: /^52/,
+        filterAreaRegExp: /^52/
       });
 
       areaMap
@@ -46,9 +46,24 @@
         })
         .on('childrensChange', function(arg) {
           console.log('childrensChange', arg);
+        })
+        .on('finish', function() {
+          Array.from({ length: 200 }).forEach(v => {
+            var center = areaMap.areaCenter.map(v => {
+              var rand = Math.random();
+              var _rand = Math.random();
+              return rand > 0.5 ? (v + _rand) : (v - _rand)
+            })
+            console.log(center);
+            var marker = new AMap.Marker({
+              position: center,
+              offset: new AMap.Pixel(-10, -10),
+              icon: './pointer1.png', // 添加 Icon 图标 URL
+              title: 'xx',
+              map: areaMap.map
+            });
+          });
         });
-
-        
     </script>
   </body>
 </html>
