--- a/test1.html
+++ b/test1.html
@@ -36,7 +36,7 @@
     <script>
       let areaMap = new AreaMap({
         el: 'container',
-        areaName: '贵州省',
+        areaName: '贵阳市',
         filterAreaRegExp: /^52/,
         zooms: [5, 18]
       });
